# DeterCode

./: .gitattributes  DeterEngineBridge.h  DeterEngineBridge.mm  LICENSE  bellek.py  boss.deter  compiler.py  derleyici.py  deter.py  dev_test.deter  gradle.properties  kod.deter  macera.deter  main.cpp  main.py  makefile  mantık.deter  motor_cekirdegi.cpp  motor_cekirdegi.py  rakip_avci.deter  saf_guc.deter  savaş.deter  settings.gradle  test.cpp
.github/workflows/: derleyici.yml  detercode_run.yml
AppleCore/: DeterApple.cpp  DeterApple.h  iOSEngine.cpp  iOSEngine.h
AppleCore/Drivers/: hw_bridge.c  sensor_link.m
AppleCore/Hardware/: iokit_driver.c  thermal_bridge.swift
AppleCore/Interface/: boot_loader.asm  dtr_runtime.deter
AppleCore/Kernel/: arch_bridge.cpp  memory_mngr.deter  syscall_hook.m
AppleCore/Memory/: page_fault_hook.deter  virtual_mem.c
AppleCore/Network/: packet_filter.cpp  socket_opt.deter
AppleCore/Runtime/: jit_allocator.cpp  objc_swizzle.m
AppleCore/Security/: entitlement_spoof.m  firewall_shield.cpp  sandbox_escape.m
AppleCore/Services/: net_tunnel.deter  power_opt.swift  proc_shield.swift
Core/AI/: behavior_tree.h  crowd_manager.h  local_llm_inference.h  navmesh_generator.h  path_finder.h
Core/Analytics/: telemetry_hub.h
Core/Animation/: blend_tree.h  skeletal_animator.h
Core/AntiTamper/: code_obfuscator_hook.h  code_virtualizer.h  debugger_detector.h  hardware_token_check.h  integrity_checker.h  pointer_obfuscator.h
Core/Audio/: audio_mixer.h  doppler_effect.h  spatial_audio.h
Core/Battery/: thermal_governor.h
Core/Compression/: texture_cruncher.h
Core/Concurrency/: thread_worker.h
Core/Cryptography/: save_encrypter.h
Core/Diagnostics/: crash_dumper.h
Core/Editor/: memory_profiler.h  ui_renderer.h
Core/FileSystem/: delta_updater.h  (+1 more)
DeterEngine/: main.cpp
DeterEngineBridge.mm/: .h
Diagnostics/: blackbox.cpp  blackbox.h
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  asm_neon_booster.cpp  asm_neon_booster.h  bellek.hpp  core_unclogger.cpp  deter_motor.cpp  matematik.cpp  motor_cekirdegi.cpp  native-lib.cpp  nice_override.cpp  nice_override.h  parser.cpp
app/src/main/cpp/feature_1_unclogger/: core_unclogger.cpp  core_unclogger.h
app/src/main/cpp/feature_2_thermal/: thermal_bypass.cpp  thermal_bypass.h
app/src/main/cpp/feature_3_ram/: ram _shifter.cpp  ram_shifter.h
assembly_opt/: android_neon_blur.S  apple_aes_hardware.S  apple_arm64_crypto.S  arm64_anti_ptrace.S  arm64_neon_matrix.S  asm_linker.h  assembly_bridge.h  cpu_intrusive.asm  fast_vector_math.S
build_engine/: CMakeLists.txt  build_script.sh
config/: ayarlar.deter
core_shared/: core_unclogger.cpp  core_unclogger.h  thermal_bypass.cpp  thermal_bypass.h
deter_automation/: build_shifter.py
detercode_auto_pilot/: recovery_registry.cpp  recovery_registry.h  self_repair.h
detercode_automotive/: obd2_protocols.h  telemetry_analyzer.py
detercode_bridge/: bridge_config.txt  bridge_types.h  data_bridge.cpp  data_bridge.h
detercode_monitor/: system_health.cpp  system_health.h
detercode_security/: integrity_check.cpp  integrity_check.h
ios/: ContentView.swift
macos/: MacContentView.swift
seneryolar/: deneme.deter  evrimsel_savas.deter  gerilim.deter  saf_guc.deter  sinematik.deter  torba.deter  tuzak.deter
src/: deter_lib.h
(+64 files in other folders)
